// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can parse a file  1`] = `
{
  "filePath": "/path/to/spec.json",
  "from": 0,
}
`;

exports[`can parse a git rev-file  1`] = `
{
  "branch": "main",
  "from": 1,
  "name": "path/to/spec.json",
}
`;

exports[`can parse a git rev-file  2`] = `
{
  "branch": "feature/1",
  "from": 1,
  "name": "spec.json",
}
`;

exports[`can parse a git rev-file  3`] = `
{
  "branch": "feature/1/define-spc",
  "from": 1,
  "name": "path/to/spec.json",
}
`;
